--- a/teiid-admin/pom.xml
+++ b/teiid-admin/pom.xml
@@ -20,19 +20,61 @@
 
 	<dependencies>
 
-<!--  
-		<dependency>
-			<groupId>org.jboss.teiid</groupId>
-			<artifactId>teiid-admin</artifactId>
-			<version>${version.teiid}</version>
-		</dependency>
-		
 		<dependency>
 			<groupId>org.jboss.teiid</groupId>
 			<artifactId>teiid-common-core</artifactId>
 			<version>${version.teiid}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-admin</artifactId>
+			<version>${version.teiid}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.jboss.xnio</groupId>
+    				<artifactId>xnio-api</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-client</artifactId>
+			<version>${version.teiid}</version>
+		</dependency>
+<!-- 
+		<dependency>
+			<groupId>org.jboss.teiid</groupId>
+			<artifactId>teiid-common-core</artifactId>
+			<type>test-jar</type>
+			<version>${version.teiid}</version>
+		</dependency>
+		
 -->
+		
+<!-- 
+		
+		<dependency>
+            <groupId>org.jboss</groupId>
+            <artifactId>jboss-dmr</artifactId>   
+            <version>1.2.0.Final-redhat-1</version> 
+        </dependency>    
+        <dependency>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>jboss-as-cli</artifactId>
+            <version>7.4.0.Final-redhat-4</version>
+        </dependency> 
+        
+ -->
+        <dependency>
+            <groupId>org.jboss.as</groupId>
+            <artifactId>jboss-as-controller</artifactId>  
+            <version>7.4.0.Final-redhat-4</version> 
+        </dependency>  
+
+
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
